kubernetes/infrastructure/configs/production/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: wireguard
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/rewrite-target: /metrics
spec:
  ingressClassName: "nginx"
  tls:
    - hosts:
        - wireguard.kryoseu.com
      secretName: wireguard-tls
  rules:
    - host: wireguard.kryoseu.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wireguard-vpn-metrics-svc
                port:
                  number: 9586
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: home-apps
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: "nginx"
  tls:
    - hosts:
        - immich.kryoseu.com
        - excalidraw.kryoseu.com
      secretName: home-apps-tls
  rules:
    - host: immich.kryoseu.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: immich-server
                port:
                  number: 2283
    - host: excalidraw.kryoseu.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: excalidraw
                port:
                  number: 5000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: plex-ns
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-redirect-to: /
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: "nginx"
  tls:
    - hosts:
        - plex.kryoseu.com
        - radarr.kryoseu.com
        - sonarr.kryoseu.com
        - deluge.kryoseu.com
        - prowlarr.kryoseu.com
      secretName: plex-arr-tls
  rules:
    - host: plex.kryoseu.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: plex
                port:
                  number: 32400
    - host: sonarr.kryoseu.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sonarr
                port:
                  number: 8989
    - host: radarr.kryoseu.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: radarr
                port:
                  number: 7878
    - host: deluge.kryoseu.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: deluge
                port:
                  number: 8112
    - host: prowlarr.kryoseu.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prowlarr
                port:
                  number: 9696
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: portainer
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: "nginx"
  tls:
    - hosts:
        - portainer.kryoseu.com
      secretName: portainer-tls
  rules:
    - host: portainer.kryoseu.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: portainer
                port:
                  number: 9000
