kubernetes/infrastructure/configs/production/ingress/lemmy.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lemmy
  namespace: lemmy
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - lemmy.bunga.kryoseu.com
      secretName: lemmy-tls

  rules:
    - host: lemmy.bunga.kryoseu.com
      http:
        paths:
          # Lemmy backend
          - path: /(api|pictrs|feeds|nodeinfo|.well-known)
            pathType: ImplementationSpecific
            backend:
              service:
                name: lemmy
                port:
                  number: 8536

          # UI
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lemmy-ui
                port:
                  number: 1234
