kubernetes/infrastructure/configs/production/ingress/paperless-ngx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: paperless
  namespace: paperless-ngx
  labels:
    app.kubernetes.io/name: paperless
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/proxy-buffering: "off"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: "nginx"
  tls:
    - hosts:
        - paperless.kryoseu.com
      secretName: paperless-tls
  rules:
    - host: "paperless.kryoseu.com"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: paperless-ngx
                port:
                  number: 8000
