kubernetes/infrastructure/configs/production/ingress/rocketchat.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: home-apps
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: "nginx"
  tls:
    - hosts:
        - chat.bunga.kryoseu.com
      secretName: rocketchat-tls
  rules:
    - host: chat.bunga.kryoseu.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rocketchat-server
                port:
                  number: 3000
