kubernetes/infrastructure/configs/production/ingress/whoops-ui.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
  name: whoops-ui
  namespace: whoops
spec:
  ingressClassName: "nginx"
  rules:
    - host: whoops-ui.kryoseu.com
      http:
        paths:
          - backend:
              service:
                name: whoops-ui
                port:
                  number: 3000
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - whoops-ui.kryoseu.com
      secretName: whoops-ui-tls-prod
