kubernetes/infrastructure/configs/production/ingress/wyrm.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
  name: wyrm-ui
  namespace: wyrm
spec:
  ingressClassName: "nginx"
  rules:
    - host: wyrm.kryoseu.com
      http:
        paths:
          - backend:
              service:
                name: wyrm-ui
                port:
                  number: 3000
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - wyrm.kryoseu.com
      secretName: wyrm-ui-tls
